# tetragon-mini

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_test.yml
contrib/tetragon-rthooks/: README.md  install-oci-hook.sh  oci-hook.json  oci-hook.sh  uninstall-oci-hook.sh
examples/oci-hook/: README.md  call-tetragon.json  call-tetragon.sh  oci-hook-example.json  oci-hook-example.sh
lima/: tetragon-mini-containerd.yaml  tetragon-mini-crio.yaml  tetragon-mini-k8s.yaml  tetragon-mini.yaml
tetragon/: Cargo.toml  build.rs
tetragon-common/: Cargo.toml
tetragon-common/src/: bpf_cred.rs  common.rs  flags.rs  lib.rs  msg_types.rs  process.rs  vmlinux.rs
tetragon-ebpf/: Cargo.toml
tetragon-ebpf/src/: lib_bpf_cgroup.rs  lib_data_msg.rs  lib_helper.rs  lib_process.rs  main.rs  maps.rs  process_bpf_execve_event.rs  process_bpf_exit.rs  process_bpf_fork.rs  process_bpf_process_event.rs  (+2 more)
tetragon/proto/: events.proto  route_guide.proto  sensors.proto  tetragon.proto
tetragon/src/: bpf.rs  lib.rs  server.rs  util.rs
tetragon/src/bpf/: maps.rs  mod.rs
tetragon/src/cgidmap/: mod.rs  podhooks.rs  rthooks.rs
tetragon/src/cgroups/: linux.rs  mod.rs
tetragon/src/k8s/: util.rs
tetragon/src/ktime/: mod.rs
tetragon/src/metrics/: mod.rs
tetragon/src/observer/: mod.rs
tetragon/src/podhelpers/: mod.rs
tetragon/src/process/: args.rs  cache.rs  mod.rs  podinfo.rs  process.rs  procfs.rs
tetragon/src/reader/: caps.rs  mod.rs  namespace.rs  path.rs  proc.rs
tetragon/src/rthooks/: args.rs  mod.rs  runner.rs
tetragon/src/watcher/: delayed_init.rs  mod.rs
(+3 files in other folders)
